# working_django_s3_upload

./: Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
mysite/: settings.py  urls.py
mysite/core/: models.py
mysite/core/migrations/: 0001_initial.py
mysite/core/templates/core/: document_form.html
mysite/static/css/: app.css
