[tool.poetry]
name = "working_django_s3_upload"
version = "0.1.0"
description = ""
authors = ["Joseph Cardenas <josephvcardenas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
django-storages = "^1.9.1"
django-heroku = "^0.3.1"
gunicorn = "^20.0.4"
boto3 = "^1.14.50"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
